add style.css and update html

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
             <div class="icon-list">
                 <i class="fa-solid fa-bars" icone></i>
             </div>
-            <div class="input-text">
-                <input type="text" texto>
+            <div class="input-area">
+                <input type="text" placeholder="Add a new task" class="input-text" texto>
             </div>
         </div>
         <div class="buttons-area">
             <div class="all-type">All</div>
             <div class="pending-type">Pending</div>
             <div class="completed-type">Completed</div>
-            <div class="clear-btn"><button class="clearall-button">Clear All</button></div>
+            <button class="clearall-button">Clear All</button>
         </div>
         <hr>
         <div class="results-area">
